backend/kalamdb-system-topic-tests.txt
    Blocking waiting for file lock on build directory
   Compiling kalamdb-system v0.2.0 (/Users/jamal/git/KalamDB/backend/crates/kalamdb-system)
error[E0433]: failed to resolve: use of undeclared type `MockStorageBackend`
   --> backend/crates/kalamdb-system/src/providers/topic_offsets/topic_offsets_provider.rs:334:32
    |
334 |         let backend = Arc::new(MockStorageBackend::new());
    |                                ^^^^^^^^^^^^^^^^^^
    |                                |
    |                                use of undeclared type `MockStorageBackend`
    |                                help: a trait with a similar name exists: `StorageBackend`

error[E0433]: failed to resolve: use of undeclared type `MockStorageBackend`
   --> backend/crates/kalamdb-system/src/providers/topic_offsets/topic_offsets_provider.rs:356:32
    |
356 |         let backend = Arc::new(MockStorageBackend::new());
    |                                ^^^^^^^^^^^^^^^^^^
    |                                |
    |                                use of undeclared type `MockStorageBackend`
    |                                help: a trait with a similar name exists: `StorageBackend`

error[E0433]: failed to resolve: use of undeclared type `MockStorageBackend`
   --> backend/crates/kalamdb-system/src/providers/topic_offsets/topic_offsets_provider.rs:373:32
    |
373 |         let backend = Arc::new(MockStorageBackend::new());
    |                                ^^^^^^^^^^^^^^^^^^
    |                                |
    |                                use of undeclared type `MockStorageBackend`
    |                                help: a trait with a similar name exists: `StorageBackend`

error[E0433]: failed to resolve: use of undeclared type `MockStorageBackend`
   --> backend/crates/kalamdb-system/src/providers/topics/topics_provider.rs:289:32
    |
289 |         let backend = Arc::new(MockStorageBackend::new());
    |                                ^^^^^^^^^^^^^^^^^^
    |                                |
    |                                use of undeclared type `MockStorageBackend`
    |                                help: a trait with a similar name exists: `StorageBackend`

error[E0433]: failed to resolve: use of undeclared type `MockStorageBackend`
   --> backend/crates/kalamdb-system/src/providers/topics/topics_provider.rs:306:32
    |
306 |         let backend = Arc::new(MockStorageBackend::new());
    |                                ^^^^^^^^^^^^^^^^^^
    |                                |
    |                                use of undeclared type `MockStorageBackend`
    |                                help: a trait with a similar name exists: `StorageBackend`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `kalamdb-system` (lib test) due to 5 previous errors
